Set text align on image replacement mixin Fix #618

--- a/src/assets/sass/protocol/includes/_mixins.scss
+++ b/src/assets/sass/protocol/includes/_mixins.scss
@@ -161,6 +161,7 @@
 @mixin image-replaced {
     direction: ltr;
     overflow: hidden;
+    text-align: left;
     text-indent: -9999px;
     white-space: nowrap;
 }
